# yoke

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  run_evals.py
.claude/: settings.local.json
.claude/agents/: architect.md  evaluator.md
.claude/commands/: eval-first.md  plan.md  review.md
docs/plans/: 001-project-scaffolding.md  002-phase0-baseline.md  003-real-corpus-pdf-ingestion.md  004-model-client-abstraction.md  005-document-ingestion-pipeline.md  006-hybrid-retrieval.md  006-langfuse-tracing.md  007-query-pipeline.md
evals/: _judge.py  conftest.py  model_comparison.py  phase0_eval.py  phase0_math_eval.py  phase1_ingestion_eval.py  phase1_pipeline_eval.py  phase2_retrieval_eval.py  phase2_tracing_eval.py
evals/results/: model_comparison.json  phase0_baseline.json  phase0_math_baseline.json  phase1_ingestion.json  phase2_tracing.json
src/yoke/: __init__.py  baseline.py  config.py  extract.py  ingest.py  models.py  pipeline.py  query.py  scoring.py  tracing.py
src/yoke/ingestion/: __init__.py  __main__.py  chunking.py  embedding.py  enrichment.py  models.py  pipeline.py  store.py
src/yoke/retrieval/: __init__.py  dense.py  fusion.py  hybrid.py  models.py  sparse.py
tests/: test_models.py  test_pipeline.py  test_retrieval.py  test_smoke.py  test_tracing.py
tests/fixtures/docs/: api-reference.md  architecture.md  getting-started.md  troubleshooting.md
tests/fixtures/docs-math/: lee_ch1.txt
