[project]
name = "yoke"
version = "0.1.0"
description = "An agentic knowledge management harness built with Claude and LangGraph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42",
    "fastapi>=0.115",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.34",
    "pymupdf>=1.27",
    "httpx>=0.28",
    "numpy>=2.0",
    "openai>=1.0",
    "rank-bm25>=0.2",
    "tqdm>=4.66",
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "ragas>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoke"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"

[project.scripts]
yoke-baseline = "yoke.baseline:main"
yoke-ingest = "yoke.ingestion.pipeline:main"
yoke-query = "yoke.query:main"
